sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value a
    a=1
    ^AlgInsertionSort:7: error: not found: value a
    while(a<1){
          ^AlgInsertionSort:8: error: not found: value a
      if(!plusPetitQue(i-a,i-a+1)){
                         ^AlgInsertionSort:8: error: not found: value a
      if(!plusPetitQue(i-a,i-a+1)){
                             ^AlgInsertionSort:9: error: not found: value a
        echange(i-a,i-a+1)
                  ^AlgInsertionSort:9: error: not found: value a
        echange(i-a,i-a+1)
                      ^AlgInsertionSort:11: error: not found: value a
      a+=1
      ^