sort.basic.insertion.AlgInsertionSort.scala.code


def insertionSort(){
  for(i<-1 to getNombreValeurs()-1){
    a=1
    while(a<1){
      if(!plusPetitQue(i-a,i-a+1)){
        echange(i-a,i-a+1)
      }
      a+=1
    }
  }
}